--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "cleanme",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/organicnz/cleanme.git",
   "dependencies": {
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
